# querypilot

./: .env.example  .gitignore  .gitmodules  GLOBAL_PLAN.md  Makefile  README  README.md  app.py  pyproject.toml  ruff.toml
backend/: .env.example  .gitignore  AWS_ATHENA_SETUP.md  Dockerfile  GLOBAL_PLAN.md  Makefile  README.md  alembic.ini  check_athena.py  check_boto3_identity.py  check_cognito.py  check_lakeformation.py  check_rds.py  check_s3.py  docker-compose.dev.yml  docker-compose.pro.yml  docker-compose.yml  grant_lakeformation_permissions.py  lakeformation_group_based_policies.json  main.py  prompt.md  pyproject.toml  requirements.dev.txt  requirements.txt  scripts_run_mapping.py
backend/.github/workflows/: ci.yaml
backend/alembic/: env.py
backend/dataset/: banking_examples.json  converted.json  create_tbl_ld.sql  sql_create_tables.sql  tables.json  target_embedding.npy  train_embeddings.npy
backend/migrations/: env.py
backend/migrations/versions/: 6958e19d7728_initial_migration.py  8cb25d17ad0c_initial_migration.py
backend/src/: config.py
backend/src/api/: __init__.py  auth.py  chat.py  db_info.py  deps.py  kb.py  metrics.py  middlewares.py  query.py  sqlite.py  user.py  utils.py
backend/src/api/v1/: text2sql.py
backend/src/core/: cognito_auth.py  db.py  exceptions.py  file_storage.py  iam_service.py  middlewares.py  rag.py  security.py  settings.py  sql_execution.py  sqlite_service.py
backend/src/models/: __init__.py  chat.py  knowledge_base.py  test.py  user.py
backend/src/nl2sql/: llm.py  prompt.py  rag.py  render_utils.py  sql_utils.py
backend/src/nl2sql/components/: chat_ui.py  performance_metrics.py  task_tracker.py
backend/src/nl2sql/dail_sql/: nl2sql.py
backend/src/nl2sql/dail_sql/llm/: chatgpt.py
backend/src/nl2sql/dail_sql/prompt/: ExampleSelectorTemplate.py  PromptICLTemplate.py  PromptReprTemplate.py  prompt_builder.py
backend/src/nl2sql/dail_sql/utils/: data_builder.py  linking_process.py  pretrained_embeddings.py  utils.py
backend/src/nl2sql/dail_sql/utils/linking_utils/: application.py
backend/src/nl2sql/nl2sql/: nl2sql.py
backend/src/nl2sql/nl2sql/llm/: chatgpt.py
backend/src/nl2sql/nl2sql/prompt/: ExampleSelectorTemplate.py  PromptICLTemplate.py  PromptReprTemplate.py  prompt_builder.py
backend/src/nl2sql/nl2sql/utils/: data_builder.py  enums.py  linking_process.py  post_process.py  utils.py
backend/src/nl2sql/nl2sql/utils/linking_utils/: application.py
backend/streamlit/src/: prompt.py  prompt_templates.py  sql_utils.py
backend/streamlit/src/components/: chat_ui.py
backend/streamlit/src/nl2sql/: nl2sql.py
backend/streamlit/src/nl2sql/prompt/: ExampleSelectorTemplate.py  PromptICLTemplate.py  PromptReprTemplate.py  prompt_builder.py
backend/streamlit/src/nl2sql/utils/: data_builder.py  linking_process.py  pretrained_embeddings.py  utils.py
backend/streamlit/src/nl2sql/utils/linking_utils/: abstract_preproc.py  application.py  spider_match_utils.py
backend/tests/: test_athena_connection.py  test_athena_nl2sql.py
frontend/: .gitignore  .prettierrc  .prettierrc.json  eslint.config.js  generate-api.sh  index.html  openapi-ts.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  chat-interface.tsx  index.css  layout.tsx
frontend/src/api/: client.gen.ts  sdk.gen.ts  transformers.gen.ts  types.gen.ts  zod.gen.ts
frontend/src/components/: ActionButtons.tsx  ChatHeader.tsx  ChatInput.tsx  DataChart.tsx  DataTable.tsx  EmptyChatState.tsx  KnowledgeManager.tsx  KnowledgeUpload.tsx  LoadingIndicator.tsx  Message.tsx  MessageActions.tsx  MessageList.tsx  SessionUpload.tsx  Sidebar.tsx  ThemeToggle.tsx  TypewriterText.tsx  UserMenu.tsx  UserPermissions.tsx
frontend/src/hooks/: use-toast.ts  useTheme.tsx
frontend/src/lib/: auth.ts  constants.ts
frontend/src/pages/: ForgotPassword.tsx  Index.tsx  Knowledge.tsx  Login.tsx  Register.tsx  Welcome.tsx
frontend/src/stores/: chatStore.ts
scripts/: tab.sh
src/: auth.py  chat_utils.py  database_schema.py  db_utils.py  llm.py  prompt.py  prompt_templates.py  render_utils.py  response.py  session.py  settings.py  sql_executor.py  sql_utils.py  sql_validator.py  task_tracker.py  text2sql.py
src/components/: chat_ui.py  performance_metrics.py  task_tracker.py
src/nl2sql/: data_preprocess.py  generate_question.py  nl2sql.py
src/pages/: chat.py  customer_insight.py  querypilot.py
tests/: test_text2sql.py
web/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
web/src/: App.tsx
(+82 files in other folders)
