[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "openai>=1.82.1",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "sqlparse>=0.5.3",
    "streamlit>=1.45.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]

[tool.uv]
default-groups = ["dev"]
