[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi[standard]>=0.115.12",
    "orjson>=3.10.18",
    "structlog>=25.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-clarity>=1.0.1",
    "pytest-env>=1.1.5",
    "pytest-html>=4.1.1",
    "pytest-sugar>=1.0.0",
    "pytest-xdist[psutil]>=3.7.0",
    "ruff>=0.11.8",
]

[tool.uv]
default-groups = ["dev"]
