[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-settings>=2.10.1",
    "numpy>=2.2.6",
    "openai>=1.82.1",
    "pandas>=2.2.3",
    "sqlparse>=0.5.3",
    "sql-metadata>=2.17.0",
    "fastapi[standard]>=0.116.0",
    "spacy>=3.8.7",
    "sentence-transformers>=5.0.0",
    "psutil>=7.0.0",
    "python-jose>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "nltk>=3.9.1",
    "attr>=0.3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = "dynamic"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "W",  # pycodestyle warnings
    "I",  # isort
    # "E", # https://github.com/charliermarsh/ruff#pycodestylet
    # "F", # https://github.com/charliermarsh/ruff#pyflakes
    # "UP", # https://github.com/charliermarsh/ruff#pyupgrade
    # "N", # https://github.com/charliermarsh/ruff#pep8-naming
    # "S", # https://github.com/charliermarsh/ruff#flake8-bandit
    # "C", # https://github.com/charliermarsh/ruff#flake8-comprehensions
    # "B", # https://github.com/charliermarsh/ruff#flake8-bugbear
    # "T", # https://github.com/charliermarsh/ruff#flake8-print
    "TID252" # Absolute import
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
    "E101",
    "E722",
    "E721",
    "E402"
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"
